Little refactoring for i18n module + documentation

--- a/documentation/i18n.md
+++ b/documentation/i18n.md
@@ -7,3 +7,13 @@ in i18n, you have to give it an id in the HTML code, to reference it in i18n, an
 then to write your translations.
 
 **Author**: Rémy Raes  
+<a name="module_ESNbang/i18n._this.load_language_file"></a>
+
+### ESNbang/i18n._this.load_language_file(lang_code)
+This function launches the loading of a file containing translations of the
+application texts in a certain language.
+Once the file is loaded, it launches the live translation of the texts;
+if it doesn't exists, the function exits.
+
+**Kind**: static method of [<code>ESNbang/i18n</code>](#module_ESNbang/i18n)  
+**Author**: Rémy Raes  
