--- a/documentation/i18n.md
+++ b/documentation/i18n.md
@@ -7,6 +7,11 @@ in i18n, you have to give it an id in the HTML code, to reference it in i18n, an
 then to write your translations.
 
 **Author**: Rémy Raes  
+
+* [ESNbang/i18n](#module_ESNbang/i18n)
+    * [._this.load_language_file(lang_code)](#module_ESNbang/i18n._this.load_language_file)
+    * [.change_language(json)](#module_ESNbang/i18n.change_language)
+
 <a name="module_ESNbang/i18n._this.load_language_file"></a>
 
 ### ESNbang/i18n._this.load_language_file(lang_code)
@@ -17,3 +22,21 @@ if it doesn't exists, the function exits.
 
 **Kind**: static method of [<code>ESNbang/i18n</code>](#module_ESNbang/i18n)  
 **Author**: Rémy Raes  
+
+| Param | Type | Description |
+| --- | --- | --- |
+| lang_code | <code>String</code> | code representing a language |
+
+<a name="module_ESNbang/i18n.change_language"></a>
+
+### ESNbang/i18n.change_language(json)
+This function allows the application to switch the text of certain elements to
+enable the understanding of it for differents languages.
+
+**Kind**: static method of [<code>ESNbang/i18n</code>](#module_ESNbang/i18n)  
+**Author**: Rémy Raes  
+
+| Param | Type | Description |
+| --- | --- | --- |
+| json | <code>JSON</code> | Object containing all variables translated in a certain language |
+
