--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -5,8 +5,11 @@
   "subscription_placeholder": "Website URL",
   "subscription_text": "Insert here a news feed you want to follow.",
   "subscription_button_text": "Subscribe",
-  
+
   "subscription_error_empty_message": "You should try to write something in there !",
-  "subscription_error_already_done": "You've already register this one.",
-  "subscription_error_url_not_valid": "The URL you entered is not valid."
+  "subscription_error_already_done": "You've already registered this one.",
+  "subscription_error_url_not_valid": "The URL you entered is not valid.",
+
+  "notification_application_still_running_title": "Application still running",
+  "notification_application_still_running_text": "ESNbang! is running in background."
 }
