Added translations for news notifications

--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -12,6 +12,8 @@
 
   "notification_application_still_running_title": "Application still running",
   "notification_application_still_running_text": "Universe is running in background.",
+  "new_notification_title": "Your Universe has news for you!",
+  "new_notification_text": "News just arrived on",
 
   "tutorial_main_title": "Universe: tutorial mode",
   "tutorial_main_body": "Welcome to your Universe! This is a tutorial mode, that will explain fastly how the application works. You can relaunch it anytime by clicking the logo, just there.",
