Updating tutorial mode with "settings mode"

--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -20,9 +20,9 @@
   "tutorial_menu_title": "Browsing menu",
   "tutorial_menu_body": "This is the browsing menu, where you can find all your favourites ESN platforms!",
   "tutorial_section_title": "Platforms",
-  "tutorial_section_body": "This is a main platform of your Universe. To display it, you just have to left click it.",
-  "tutorial_delsite_title": "Deleting a platform",
-  "tutorial_delsite_body": "If you want to delete a platform, just right click it and press the delete button.<br><u>Please note that you cannot delete a main platform from your Universe.</u>",
+  "tutorial_section_body": "This is a main platform of your Universe. To display it, you just have to left click it.<br>To activate the settings mode, right click it.",
+  "tutorial_settings_mode_title": "Settings mode",
+  "tutorial_settings_mode_body": "From here, you can mute a platform (for it not to send you notifications), or delete it.<br><u>Please note that you cannot delete a main platform from your Universe.</u>",
   "tutorial_addsite_title": "Adding a new platform",
   "tutorial_addsite_body": "If you want to add a new source of information, you simply have to click this button!",
   "tutorial_newsite_title": "Adding a custom platform",
