--- a/i18n/frFR.json
+++ b/i18n/frFR.json
@@ -20,9 +20,9 @@
   "tutorial_menu_title": "Menu de navigation",
   "tutorial_menu_body": "Voici le menu de navigation, c'est là que tu pourras retrouver tous tes plateformes ESN préférées !",
   "tutorial_section_title": "Plateformes",
-  "tutorial_section_body": "Ceci est une plateforme principale de ton application. Pour l'afficher, il te suffit de faire un clic gauche dessus.",
-  "tutorial_delsite_title": "Supprimer une plateforme",
-  "tutorial_delsite_body": "Si tu veux supprimer une plateforme, fais un clic droit dessus et clic gauche sur le bouton de suppression qui est apparu.<br><u>Note cependant qu'il est impossible de supprimer une plateforme principale de ton application.</u>",
+  "tutorial_section_body": "Ceci est une plateforme principale de ton application. Pour l'afficher, il te suffit de faire un clic gauche dessus.<br>Pour accéder à ses paramètres, utilise ton clic droit.",
+  "tutorial_settings_mode_title": "Paramètres",
+  "tutorial_settings_mode_body": "Ici, tu peux couper les notifications de la plateforme, ou bien la supprimer.<br><u>Note cependant qu'il est impossible de supprimer une plateforme principale de ton application.</u>",
   "tutorial_addsite_title": "Ajouter une nouvelle plateforme",
   "tutorial_addsite_body": "Si tu veux ajouter une nouvelle source d'informations, tu as juste à cliquer ce bouton !",
   "tutorial_newsite_title": "Ajouter une nouvelle plateforme",
