--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -20,12 +20,12 @@
   "tutorial_menu_title": "Browsing menu",
   "tutorial_menu_body": "This is the browsing menu, where you can find all your favourites ESN platforms!",
   "tutorial_section_title": "Platforms",
-  "tutorial_section_body": "This is a main platform of your Universe. To display it, you just have to left click it.<br>To activate the settings mode, right click it.",
+  "tutorial_section_body": "This is a platform of your Universe. To display it, you just have to left click it.<br>To activate the settings mode, right click it.",
   "tutorial_settings_mode_title": "Settings mode",
-  "tutorial_settings_mode_body": "From here, you can mute a platform (for it not to send you notifications), or delete it.<br><u>Please note that you cannot delete a main platform from your Universe.</u>",
+  "tutorial_settings_mode_body": "From here, you can mute a platform (for it not to send you notifications), reset it (reload the base URL), or delete it.",
   "tutorial_addsite_title": "Adding a new platform",
   "tutorial_addsite_body": "If you want to add a new source of information, you simply have to click this button!",
-  "tutorial_newsite_title": "Adding a custom platform",
+  "tutorial_newsite_title": "Adding a new platform",
   "tutorial_newsite_body": "You just have to insert the URL of the website you want to follow here, and click the \"Subscribe\" button.",
   "tutorial_end_title": "End",
   "tutorial_end_body": "Now, you're good to go!<br>Don't hesitate to contact your webmaster if you need assistance :)",
