Added visibility to documentation

--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -12,7 +12,7 @@
 
   "notification_application_still_running_title": "Application still running",
   "notification_application_still_running_text": "Universe is running in background.",
-  "new_notification_title": "Your Universe has news for you!",
+  "new_notification_title": "Something happened!",
   "new_notification_text": "News just arrived on",
 
   "tutorial_main_title": "Universe: tutorial mode",
