Added some console.log debug

--- a/i18n/frFR.json
+++ b/i18n/frFR.json
@@ -12,7 +12,7 @@
 
   "notification_application_still_running_title": "Ninja !",
   "notification_application_still_running_text": "L'appli tourne toujours en arrière-plan.",
-  "new_notification_title": "Notification !",
+  "new_notification_title": "Y'a du neuf !",
   "new_notification_text": "Des nouvelles sont arrivées sur",
 
   "tutorial_main_title": "Universe: mode tutoriel",
