--- a/i18n/esME.json
+++ b/i18n/esME.json
@@ -1,5 +1,5 @@
 {
-  "home_message": "Bienvenido en Universe, la nueva aplicacion para la familia ESN ! <br /><br /> Este aplicacion hace la centralizacion de los outillos que utilizan diarios los ESNers al mismo espacio, no vas a perder tiempo para recordarte que es el URL de cada sitio web ! <br />Universe puede tambien mandarte notificaziones y informarte cuando esta passando algo en uno de tus sitios web favoritos ! Igualemente, cuando cerras la ventana, la aplicacion no se cerra, perro siempre funcionnando en background, siempre para ecuchar novelas :)",
+  "home_message": "Bienvenido en Universe, la nueva aplicacion para la familia ESN ! <br /><br /> Este aplicacion hace la centralizacion de los outillos que utilizan diarios los ESNers al mismo espacio, no vas a perder tiempo para recordarte que es el URL de cada sitio web ! <br />Universe puede tambien mandarte notificaziones y informarte cuando esta passando algo en uno de tus sitios web favoritos ! Igualemente, cuando cerras la ventana, la aplicacion no se cerra, perro siempre funcionnando en background, siempre para escuchar novelas :)",
   "home_tooltip": "Inicio",
   "subscription_tooltip": "Agregar una nueva sitio web",
   "subscription_placeholder": "Direccion web",
