Added tutorial button

--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -1,6 +1,7 @@
 {
   "home_message": "Welcome to Universe, the new application for members of the Erasmus Student Network !<br /><br /> This application gathers many tools used every day by ESNers, everything is at the same place, no need to search for the tools anymore !<br />Universe can also send you notifications: it listens to information sources (Facebook pages, livestreams, etc) and can tell you when something is happening ! Moreover, when you close its main frame, the application doesn't close itself, but rather goes background on your computer, still listening for news :)",
   "home_tooltip": "Home",
+  "home_tutorial_button": "Tutorial",
   "subscription_tooltip": "Subscribe to a news feed",
   "subscription_placeholder": "Website URL",
   "subscription_text": "Insert here a news feed you want to follow.",
