Corrected some translations

--- a/i18n/enGB.json
+++ b/i18n/enGB.json
@@ -17,7 +17,7 @@
   "new_notification_text": "News just arrived on",
 
   "tutorial_main_title": "Universe: tutorial mode",
-  "tutorial_main_body": "Welcome to your Universe! This is a tutorial mode, that will explain fastly how the application works. You can relaunch it anytime by clicking the logo, just there.",
+  "tutorial_main_body": "Welcome to your Universe! This is a tutorial mode, that will explain fastly how the application works. You can relaunch it anytime by clicking the \"Tutorial\" button.",
   "tutorial_menu_title": "Browsing menu",
   "tutorial_menu_body": "This is the browsing menu, where you can find all your favourites ESN platforms!",
   "tutorial_section_title": "Platforms",
