--- a/i18n/esME.json
+++ b/i18n/esME.json
@@ -17,7 +17,7 @@
   "new_notification_text": "Ponga un ojo en",
 
   "tutorial_main_title": "Universe: modo tutorial",
-  "tutorial_main_body": "Bienvenidos en Universe ! Esto es un modo tutorial, esta explicando rapidamente como funciona la aplicacion. Puedes reanimarlo a cualquier momento, dale un click en el logo.",
+  "tutorial_main_body": "Bienvenidos en Universe ! Esto es un modo tutorial, esta explicando rapidamente como funciona la aplicacion. Puedes reanimarlo a cualquier momento, dale un click en el botón \"Tutorial\".",
   "tutorial_menu_title": "Menu de navigacion",
   "tutorial_menu_body": "Aqui el menu de navigacion, aqui podrias ver todos tus sitios favoritos !",
   "tutorial_section_title": "Plateformes",
