--- a/i18n/frFR.json
+++ b/i18n/frFR.json
@@ -17,7 +17,7 @@
   "new_notification_text": "Des nouvelles sont arrivées sur",
 
   "tutorial_main_title": "Universe: mode tutoriel",
-  "tutorial_main_body": "Bienvenue sur Universe ! Ceci est un mode tutoriel, qui explique rapidement comment fonctionne l'application. Tu peux le relancer à n'importe quel moment, en cliquant sur ce logo.",
+  "tutorial_main_body": "Bienvenue sur Universe ! Ceci est un mode tutoriel, qui explique rapidement comment fonctionne l'application. Tu peux le relancer à n'importe quel moment, en cliquant sur le bouton \"Tutoriel\".",
   "tutorial_menu_title": "Menu de navigation",
   "tutorial_menu_body": "Voici le menu de navigation, c'est là que tu pourras retrouver tous tes plateformes ESN préférées !",
   "tutorial_section_title": "Plateformes",
